src/test/ui/issues/issue-51279.stderr
error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:11:14
   |
LL | pub struct X<#[cfg(none)] 'a, #[cfg(none)] T>(&'a T);
   |              ^^^^^^^^^^^^

error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:11:31
   |
LL | pub struct X<#[cfg(none)] 'a, #[cfg(none)] T>(&'a T);
   |                               ^^^^^^^^^^^^

error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:15:6
   |
LL | impl<#[cfg(none)] 'a, #[cfg(none)] T> X<'a, T> {}
   |      ^^^^^^^^^^^^

error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:15:23
   |
LL | impl<#[cfg(none)] 'a, #[cfg(none)] T> X<'a, T> {}
   |                       ^^^^^^^^^^^^

error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:19:10
   |
LL | pub fn f<#[cfg(none)] 'a, #[cfg(none)] T>(_: &'a T) {}
   |          ^^^^^^^^^^^^

error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:19:27
   |
LL | pub fn f<#[cfg(none)] 'a, #[cfg(none)] T>(_: &'a T) {}
   |                           ^^^^^^^^^^^^

error: #[cfg_attr] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:28:13
   |
LL | unsafe impl<#[cfg_attr(none, may_dangle)] T> Drop for M<T> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:33:23
   |
LL | type Z<#[ignored] 'a, #[cfg(none)] T> = X<'a, T>;
   |                       ^^^^^^^^^^^^

error: aborting due to 8 previous errors

